# resnet-detector

./: README.md  requirements.txt  setup.cfg  setup.py
resnet_detector/: __main__.py  config.py
resnet_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
