[metadata]
name = resnet-detector
version = 0.1.0
author = Glen Hanson
author_email = glen.s.hanson@gmail.com

[options]
install_requires = 
    fire

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    resnet = resnet_detector.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import